final requirements site

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steam Games
-    </title>
-   
+    <title>Document</title>
 </head>
 <body>
-    
     <div class="topnav">
         <a class="active" href="/">Home</a>
         <a href='/dataset''>Dataset</a>
         <a href="/stats">Stats and Visuals</a>
-      </div>
+    </div>
+    
+    <div>
+        <img src="static/review_name.png" alt="">
+    </div>
+    <div>
+        <img src="static/popularity_genre.png" alt="">
+    </div>
+    <div>
+        <img src="static/revenue_name.png" alt="">
+    </div>
+    <div>
+        <img src="static/genre_pie.png" alt="">
+    </div>
 
-      <h1 style="margin: auto; width: 50%;padding: 10px; text-align: center;"> Steam Games Dataset</h1>
-      <h3  style="margin: auto; width: 50%;padding: 10px; text-align: center;">by Sebastian Chavez</h2>
+
 </body>
 </html>
